--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   margin: 2em 4em 2em 4em;
   font-size: 120%;
   line-height: 130%;
-  background-color: #ffffff;
+  background-color: #b9b9b9;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -180,7 +180,7 @@ code {
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
-  padding: 0px 3px;
+  padding: 100px 3px;
   display: inline-block;
   color: #52595d;
   border: 1px solid #ccc;
