--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   margin: 2em 4em 2em 4em;
   font-size: 120%;
   line-height: 130%;
-  background-color: #000000;
+  background-color: #ffffff;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -13,12 +13,12 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 0.5em;
 }
 
-h1 {font-size: 2em; color: #b9b9b9;}
-h2 {font-size: 1.8em; color: #a9a9a9;}
-h3 {font-size: 1.6em; color: #9a9a9a;}
-h4 {font-size: 1.4em; color: #8a8a8a;}
-h5 {font-size: 1.2em; color: #7a7a7a;}
-h6 {font-size: 1em; color: #7b7b7b;}
+h1 {font-size: 2em; color: #000000;}
+h2 {font-size: 1.8em; color: #404040;}
+h3 {font-size: 1.6em; color: #707070;}
+h4 {font-size: 1.4em; color: #909090;}
+h5 {font-size: 1.2em; color: #989898;}
+h6 {font-size: 1em; color: #9c9c9c;}
 
 p, pre, blockquote, table, ul, ol, dl {
   margin-top: 1em;
@@ -42,8 +42,8 @@ dt { font-weight: bold; }
 img { border: none; }
 
 pre {
-  border-left: 5px solid #101010;
-  background-color: #525252;
+  border-left: 5px solid #dcdcdc;
+  background-color: #f5f5f5;
   padding-left: 1em;
   font-family: Monaco, "Courier New", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace;
   font-size: 0.8em;
@@ -51,61 +51,61 @@ pre {
 }
 
 p > a {
-  color: #b9b9b9;
+  color: white;
   text-decoration: none;
   font-size: 0.7em;
   padding: 3px 6px;
   border-radius: 3px;
-  background-color: #686868;
+  background-color: #1e90ff;
   text-transform: uppercase;
   font-weight: bold;
 }
 
 p > a:hover {
-  color: #b9b9b9;
+  color: #dcdcdc;
   background-color: #484848;
 }
 
 li > a {
-  color: #686868;
+  color: #1e90ff;
   font-weight: bold;
   text-decoration: none;
 }
 
-li > a:hover { color: #7c7c7c; }
+li > a:hover { color: #ff4500; }
 
 blockquote {
-  color: #aaaaaa;
+  color: #686868;
   font-size: 0.8em;
   line-height: 120%;
   padding: 0.8em;
-  border-left: 5px solid #101010;
+  border-left: 5px solid #dcdcdc;
 }
 
 th, td {
-  border: 1px solid #101010;
+  border: 1px solid #ccc;
   padding: 0.3em;
 }
 
-th { background-color: #000000; }
+th { background-color: #f0f0f0; }
 
 hr {
   border: none;
-  border-top: 1px solid #101010;
+  border-top: 1px solid #ccc;
   width: 100%;
 }
 
 del {
   text-decoration: line-through;
-  color: #7c7c7c;
+  color: #777777;
 }
 
 .toc li { list-style-type: none; }
 
 .todo {
   font-weight: bold;
-  background-color: #7c7c7c ;
-  color: #b9b9b9;
+  background-color: #ff4500 ;
+  color: white;
   font-size: 0.8em;
   padding: 3px 6px;
   border-radius: 3px;
@@ -121,7 +121,7 @@ del {
 }
 
 .tag {
-  background-color: #525252;
+  background-color: #eeeeee;
   font-family: monospace;
   padding: 2px;
 }
@@ -180,9 +180,9 @@ code {
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
-  padding: 16px 16px;
+  padding: 4px;
   display: inline-block;
-  color: #747474;
-  border: 1px solid #101010;
-  background-color: #525252;
+  color: #52595d;
+  border: 1px solid #ccc;
+  background-color: #f9f9f9;
 }
