--- a/style.css
+++ b/style.css
@@ -174,13 +174,13 @@ del {
 
 code {
   font-family: Monaco, "Courier New", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace;
-  -webkit-border-radius: 1px;
-  -moz-border-radius: 1px;
-  border-radius: 1px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
-  padding: 4px;
+  padding: 4px 8px;
   display: inline-block;
   color: #52595d;
   border: 1px solid #ccc;
